@@ -12,4 +12,15 @@ Error: This expression has type
            ('a, 'b, 'c, 'd, 'd, 'a) CamlinternalFormatBasics.format6
        but an expression was expected of type string
 # - : bool -> ('a, 'b, 'a) format = <fun>
+#                   module PR7135 :
+  sig
+    module M : sig type t = private int end
+    type t = M.t
+    val lift2 : (int -> int -> int) -> t -> t -> int
+  end
+#             Characters 133-143:
+    let f x = let y = if true then x else (x:t) in (y :> int)
+                                                   ^^^^^^^^^^
+Warning 18: this ground coercion is not principal.
+module Test1 : sig type t = private int val f : t -> int end
 # 
